Fixed alignments for partials

--- a/src/public/css/styles.css
+++ b/src/public/css/styles.css
@@ -63,7 +63,60 @@
 	width: 76.1%;
 }
 
-body {
+/* body {
 	background: grey;
+	margin: 0;
+} */
+
+/*  */
+
+#container {
+	min-height: 100%;
+	position: relative;
+	background-color: #1e2022;
+}
+#body {
+	padding-bottom: 100px;
+	color: #f0f5f9;
+}
+.signupBox {
+	margin: 0;
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	-ms-transform: translate(-50%, -50%);
+	transform: translate(-50%, -50%);
+	width: 35%;
+	max-width: 400px;
+}
+#navbar {
+	text-align: center;
+	padding: 2rem 2rem;
+	background-color: #c9d6df;
+	color: #00adb5;
+}
+#footer {
+	background-color: #c9d6df;
+	color: #52616b;
+	position: absolute;
+	bottom: 0;
+	width: 100%;
+	height: 100px;
+}
+.footer {
+	text-align: center;
+	padding: 1rem;
+	/* margin: auto auto; */
+}
+
+/* Universal */
+html,
+body {
+	background-color: #f9f7f7;
+	height: 100%;
+	margin: 0;
+	padding: 0;
+}
+h1 {
 	margin: 0;
 }
